--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -36,7 +36,7 @@
                     <label for="">Descripción</label>
                     <input type="text" class="form-control" 
                            name="precioMitad" [(ngModel)]="producto.precioMitad"  
-                           placeholder="Precio de la mitad del producto">
+                           placeholder="Descripción del producto">
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Categoría</label>
